[Build] Use maven tool chains and cucumber-parent pom